@@ -93,7 +93,7 @@ public class POLoad extends PhysicalOperator {
         loader = new ReadToEndLoader((LoadFunc)
                 PigContext.instantiateFuncFromSpec(lFile.getFuncSpec()), 
                 ConfigurationUtil.toConfiguration(pc.getProperties()), 
-                lFile.getFileName(),0);
+                lFile.getFileName(),0, signature);
     }
     
     /**
