@@ -33,6 +33,7 @@ import org.apache.pig.backend.executionengine.ExecException;
 import org.apache.pig.data.DataBag;
 import org.apache.pig.impl.PigContext;
 import org.apache.pig.newplan.Operator;
+import org.apache.pig.test.utils.UDFContextTestLoaderWithSignature;
 import org.junit.BeforeClass;
 import org.junit.Test;
 
@@ -392,6 +393,15 @@ public class TestExampleGenerator {
         pigServer.registerQuery("store D into '" +  out.getAbsolutePath() + "';");
         Map<Operator, DataBag> derivedData = pigServer.getExamples(null);
     
+        assertNotNull(derivedData);
+    }
+    
+    @Test
+    public void testLoaderWithContext() throws Exception {
+        PigServer pigServer = new PigServer(pigContext);
+        pigServer.registerQuery("A = load " + A.toString() + " using " + UDFContextTestLoaderWithSignature.class.getName() + "('a') as (x, y);");
+        Map<Operator, DataBag> derivedData = pigServer.getExamples("A");
+        
         assertNotNull(derivedData);
     }
 
